# beamng-rs

./: .gitignore  Cargo.toml
crates/beamng-proto/: Cargo.toml
crates/beamng-proto/src/: connection.rs  error.rs  frame.rs  lib.rs  types.rs
crates/beamng-rs/: Cargo.toml
crates/beamng-rs/examples/: camera_streaming.rs  manual_control_gui.rs  simple.rs
crates/beamng-rs/src/: beamng.rs  lib.rs  scenario.rs  vehicle.rs
crates/beamng-rs/src/api/: mod.rs
crates/beamng-rs/src/api/beamng/: camera.rs  control.rs  debug.rs  environment.rs  mod.rs  scenario.rs  settings.rs  system.rs  traffic.rs  ui.rs  vehicles.rs
crates/beamng-rs/src/api/vehicle/: ai.rs  mod.rs  root.rs
crates/beamng-rs/src/sensors/: camera.rs  electrics.rs  gps.rs  imu.rs  mod.rs  sensor.rs  state.rs
