[package]
name = "beamng-proto"
version = "0.1.0"
edition = "2021"
description = "Wire protocol, types and serialization for BeamNG.tech"

[dependencies]
bytes = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
